# bagEditor

./: CMakeLists.txt  package.xml
.hg/: dirstate  hgrc
.hg/cache/: branch2-served  rbc-revs-v1
.hg/store/: 00manifest.i
.hg/store/data/: _makefile.i  manifest.xml.i
.hg/store/data/nodes/: bagmerge.py.i  bagtrim.py.i
nodes/: filter_bags  mergeall.sh
src/: merge_bag.cpp
