<?xml version="1.0"?>
<package>
<name>bag_editor</name>
<version>0.0.0</version>
<description>The bag_edit package</description>
<maintainer email="daniel.adolfsson@oru.se">Daniel Adolfsson</maintainer>


<author>Daniel Adolfsson</author>
<license>BSD</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>cmake_modules</build_depend>
<build_depend>libpcl-all-dev</build_depend>
<build_depend>roscpp</build_depend>
<build_depend> pcl_conversions</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend> roscpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>laser_geometry</build_depend>
<build_depend>eigen_conversions</build_depend>
<build_depend>tf_conversions</build_depend>
<build_depend>tf</build_depend>
<build_depend>genmsg</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>tf_conversions</build_depend>
<build_depend>velodyne_msgs</build_depend>
<build_depend>genmsg</build_depend>
<build_depend>std_msgs</build_depend>


<run_depend>std_msgs</run_depend>
<run_depend>genmsg</run_depend>
<run_depend>libpcl-all-dev</run_depend>
<run_depend> pcl_conversions</run_depend>
<run_depend>pcl_ros</run_depend>
<run_depend> roscpp</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>laser_geometry</run_depend>
<run_depend>cmake_modules</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>libpcl-all-dev</run_depend>
<run_depend>eigen_conversions</run_depend>
<run_depend>tf_conversions</run_depend>
<run_depend>tf</run_depend>
<run_depend>genmsg</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>tf_conversions</run_depend>


</package>

